# ceph-pr-archive

./: .gitignore  CMakeLists.txt  COPYING  CodingStyle  PendingReleaseNotes  README.md  SubmittingPatches.rst  ceph.spec.in  install-deps.sh
alpine/: APKBUILD.in
cmake/modules/: AddCephTest.cmake
debian/: control  copyright
doc/dev/: ceph_krb_auth.rst  index.rst
doc/man/8/: radosgw-admin.rst
doc/mgr/: ansible.rst  ansible_orchestrator.rst  dashboard.rst  index.rst  orchestrator_cli.rst
doc/rados/operations/: cache-tiering.rst  crush-map-edits.rst  crush-map.rst  poolsets.rst
doc/radosgw/: adminops.rst  cloud-sync-module.rst
doc/releases/: luminous.rst  mimic.rst
qa/objectstore/: bluestore.yaml
qa/standalone/: ceph-helpers.sh
qa/standalone/mon/: mon-last-epoch-clean.sh
qa/standalone/osd/: osd-backfill-space.sh
qa/standalone/special/: ceph_objectstore_tool.py
qa/tasks/: ceph.py  ceph_manager.py  rgw.py  s3tests.py  thrashosds.py
qa/tasks/cephfs/: test_scrub_checks.py  test_volume_client.py
qa/workunits/cephtool/: test.sh
qa/workunits/rados/: test_rados_tool.sh
src/: CMakeLists.txt  bootstrap-tracing.sh  ceph-create-keys  ceph_fuse.cc  ceph_mds.cc  ceph_mon.cc  ceph_osd.cc  ceph_syn.cc  libcephfs.cc  rbdmap  vstart.sh
src/auth/: AuthAuthorizeHandler.cc  AuthClientHandler.cc  AuthMethodList.cc  AuthServiceHandler.cc  AuthSessionHandler.cc  CMakeLists.txt  Crypto.cc
src/auth/krb/: KrbClientHandler.cpp  KrbServiceHandler.cpp
src/auth/ldap_krb/: KrbAuthorizeHandler.cpp  KrbProtocol.cpp  (+15 more)
src/client/: CMakeLists.txt  Client.cc  Client.h  Inode.h
src/common/: CMakeLists.txt  Cond.h  CondVar.h  Finisher.h  OpQueue.h  PrioritizedQueue.h  Throttle.cc  Throttle.h  TrackedOp.h  WeightedPriorityQueue.h  WorkQueue.cc  asio_misc.h  buffer.cc  ceph_context.cc  ceph_strings.cc  ceph_time.h  ceph_timer.h  config.cc  config_obs_mgr.h  config_proxy.h  config_values.h  dout.h  entity_name.cc  entity_name.h  error_code.cc  error_code.h  hobject.h  legacy_config_opts.h  mClockPriorityQueue.h  mempool.cc  options.cc  perf_counters.cc  perf_counters.h  perf_histogram.h  shared_cache.hpp  snap_types.h
src/compressor/brotli/: BrotliCompressor.cc  CMakeLists.txt  CompressionPluginBrotli.cc
src/crimson/: CMakeLists.txt
src/global/: global_init.cc  signal_handler.cc
src/include/: Context.h  buffer.h  ceph_features.h  ceph_fs.h  config-h.in.cmake  cxx_function.hpp  denc.h  encoding.h  interval_set.h  object.h  rados.h  types.h  util.h  utime.h  uuid.h
src/kv/: KeyValueDB.h  RocksDBStore.cc  RocksDBStore.h
src/librados/: AioCompletionImpl.h  CMakeLists.txt  IoCtxImpl.cc  PoolAsyncCompletionImpl.h  RadosClient.cc  RadosClient.h  librados.cc
src/librbd/: CMakeLists.txt  DeepCopyRequest.cc  ExclusiveLock.cc  ExclusiveLock.h  Features.cc  ImageCtx.cc  ImageCtx.h  Journal.cc  Journal.h  LibrbdWriteback.cc  ObjectMap.cc  ObjectMap.h  Operations.cc  Utils.h  internal.cc  librbd.cc
src/log/: Log.cc  Log.h
src/mds/: CDentry.cc  CDentry.h  CDir.cc  CDir.h  CInode.cc  CInode.h  Locker.cc  Locker.h  MDBalancer.cc  MDCache.cc  MDCache.h  MDSContext.cc  MDSContext.h  MDSDaemon.cc  MDSDaemon.h  MDSMap.h  MDSRank.cc  MDSRank.h  MDSTable.cc  MDSTableClient.cc  Migrator.cc  Migrator.h  Mutation.cc  Mutation.h  OpenFileTable.cc  PurgeQueue.h  RecoveryQueue.cc  ScatterLock.h  ScrubStack.cc  ScrubStack.h  Server.cc  Server.h  SessionMap.cc  SessionMap.h  SimpleLock.h  SnapClient.cc  StrayManager.cc  journal.cc  mdstypes.cc  mdstypes.h
src/messages/: MDentryLink.h  MDentryUnlink.h  MDirUpdate.h  MDiscover.h  MDiscoverReply.h  MExportCaps.h  MExportCapsAck.h  MExportDirCancel.h  MExportDirDiscover.h  MExportDirDiscoverAck.h  MExportDirFinish.h  MExportDirNotify.h  MExportDirNotifyAck.h  MExportDirPrep.h  MExportDirPrepAck.h  MGatherCaps.h  MInodeFileCaps.h  MLock.h  MMDSCacheRejoin.h  MMDSFindIno.h  MMDSFindInoReply.h  MMDSFragmentNotify.h  MMDSOpenIno.h  MMDSOpenInoReply.h  MMDSResolve.h  MMDSResolveAck.h  MMDSSlaveRequest.h  MOSDPGLog.h  MOSDPing.h
src/mgr/: ActivePyModules.cc  BaseMgrModule.cc  CMakeLists.txt  ClusterState.cc  DaemonServer.cc  MgrClient.cc  MgrStandby.cc  MgrStandby.h  OSDPerfMetricReport.h
src/mon/: CMakeLists.txt  ConfigMap.cc  ConfigMap.h  MonClient.cc  MonClient.h  MonCommands.h  MonMap.cc  Monitor.cc  Monitor.h  MonmapMonitor.cc  MonmapMonitor.h  OSDMonitor.cc  OSDMonitor.h  PGMap.cc  PGMap.h
src/msg/: CMakeLists.txt  Connection.h  msg_types.h
src/objclass/: class_api.cc  objclass.h
src/os/: CMakeLists.txt  ObjectStore.h
src/osd/: CMakeLists.txt  ECBackend.cc  OSD.cc  OSD.h  OSDMap.cc  OSDMap.h  PG.cc  PG.h  PGBackend.h  PGLog.h  PrimaryLogPG.cc  PrimaryLogPG.h  ReplicatedBackend.cc  ReplicatedBackend.h  mClockOpClassQueue.h  osd_types.cc  osd_types.h
src/osdc/: Filer.cc  Filer.h  Objecter.cc  Objecter.h
src/pybind/: ceph_argparse.py  ceph_volume_client.py
src/rados_unleashed/: CMakeLists.txt  RADOSImpl.cc  RADOSImpl.h  rados_unleashed.cc
src/rgw/: CMakeLists.txt  librgw_admin_user.cc  rgw_admin.cc  rgw_admin_user.cc  rgw_admin_user.h  rgw_asio_frontend.cc  rgw_auth.cc  rgw_auth.h  rgw_auth_s3.cc  rgw_auth_s3.h  rgw_bucket.cc  rgw_bucket.h  rgw_cache.cc  rgw_cache.h  rgw_common.cc  rgw_common.h  rgw_cr_rados.cc  rgw_cr_rados.h  rgw_cr_rest.h  rgw_data_sync.cc  rgw_dencoder.cc  rgw_dmclock_scheduler.h  rgw_file.cc  rgw_file.h  rgw_frontend.h  rgw_http_errors.h  rgw_iam_policy.cc  rgw_iam_policy.h  rgw_json_enc.cc  rgw_lc.cc  rgw_lc.h  rgw_main.cc  rgw_op.cc  rgw_op.h  rgw_process.cc  rgw_process.h  rgw_quota.cc  rgw_quota.h  rgw_rados.cc  rgw_rados.h  (+17 more)
src/script/: ceph_dump_log.py  credits.sh
src/test/: CMakeLists.txt  librgw_file_aw.cc  librgw_file_xattr.cc  perf_counters.cc
src/tools/: CMakeLists.txt  ceph_monstore_tool.cc  ceph_objectstore_tool.cc
src/tracing/: CMakeLists.txt  ceph_logging.tp  ceph_logging_impl.h  librados.tp  trace-events.txt  trace_events.txt
src/tracing/tracetool/: README.md  parsetool.py  tracetool.py
src/tracing/tracetool/subsys/: bluefs  bluestore  bluestore_cache  bluestore_gc  ceph_log  dummy  pg
(+910 files in other folders)
